layers/k3s/var/lib/rancher/k3s/server/manifests/opt/traefik-rewritebody.m4.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewritebody
  namespace: kube-system
spec:
  plugin:
    rewritebody:
      lastModified: true
      rewrites:
        - regex: /anubis/static/img/
          replacement: /die/

        - regex: https://(www\.)?youtube.com
          replacement: https://youtube.m5_assert([ENV_DOMAIN])
