layers/k3s/var/lib/rancher/k3s/server/manifests/opt/external-names.m4.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-names
  namespace: external-names
# m5_for([EXTERNAL_NAME], [
# m4_pushdef([LHS], [m4_regexp(EXTERNAL_NAME, [\(^[^:]+\)], [\1])])
# m4_pushdef([RHS], [m4_regexp(EXTERNAL_NAME, [\([^:]+\)$], [\1])])
---
# LHS.external-names.svc.cluster.local
apiVersion: v1
kind: Service
metadata:
  name: LHS
  namespace: external-names
spec:
  type: ExternalName
  externalName: RHS
# ], m5_assert([ENV_EXTERNAL_NAMES]))
