layers/k3s/var/lib/rancher/k3s/server/manifests/opt/kube-state-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-ingress
  namespace: kube-state-metrics
spec:
  rules:
    - host: kube-state-metrics
      http:
        paths:
          - backend:
              service:
                name: kube-state-metrics
                port:
                  number: 8080
            path: /
            pathType: Prefix
