layers/k3s/var/lib/rancher/k3s/server/manifests/opt/metrics-server.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: talk-to-your-self
  namespace: &ns kube-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: *ns
